--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
             <div class="container">
                 <div class="row">
                     <div class="about-col-1">
-                        <img src="images/user.png">
+                        <!--<img src="images/user.png">-->
+                        <img src="images/user1.jpg">
                     </div>
                     <div class="about-col-2">
                         <h1 class="sub-title">About Me</h1>
@@ -98,21 +99,21 @@
                         <i class="fa-solid fa-code"></i>
                         <!-- 1st service role, and it description-->
                         <h2>Data Engineer</h2>
-                        <p>description txt to be placed</p>
+                        <p> Need to Add here</p>
                         <a href="#">Learn more</a>
                     </div>
                     <div>
                         <i class="fa-solid fa-crop-simple"></i>
                         <!-- 2nd service role, and it description-->
-                        <h2>Data Analysis</h2>
-                        <p>description txt to be placed</p>
+                        <h2>Data Analyst</h2>
+                        <p> Need to Add here</p>
                         <a href="#">Learn more</a>
                     </div>
                     <div>
                         <i class="fa-sharp fa-solid fa-database"></i> <!-- icons in all the above 3 services created from "fontawesome.com"-->
                         <!-- 3rd service role, and it description-->
-                        <h2>Data Scientist</h2>
-                        <p>description txt to be placed</p>
+                        <h2>Computer Vision Engineer</h2>
+                        <p> Need to Add here</p>
                         <a href="#">Learn more</a>
                     </div>
                 </div>
@@ -126,29 +127,53 @@
                 <div class="work-list">
                     <!-- Adding Work images here from the folder, so change it according to mine jobs-->
                     <div class="work">
-                        <img src="images/work-1.png">
+                        <!--<img src="images/work-1.png">-->
+                        <img src="images/work1.jpg">
                         <div class="layer">
                             <!-- Adding description for the image-1 being showed on the website-->
-                            <h3>Social Media App</h3>
-                            <p>ADD DESCRIPTION HERE, FOR THE RESPECTIVE IMAGE WORK, OF YOURS</p>
+                            <h3>Bank Loan Prediction Model</h3>
+                            <p> ● Developed and implemented machine learning models (logistic regression, decision trees,
+                                random forests) for loan approval prediction, optimizing customer data analysis.</p>
+                            <p> ● Performed extensive feature engineering, preprocessing, and handling of missing values and
+                                categorical variables to enhance data efficiency.</p>
+                            <p> ● Presented actionable insights based on comprehensive analysis, optimizing loan approval
+                                processes and improving decision-making efficiency.</p>
+                            <p> ● Demonstrated strong analytical skills, attention to detail, and proficiency in handling large
+                                datasets, resulting in enhanced loan processing efficiency.</p>
                             <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
                     </div>
                     <div class="work">
-                        <img src="images/work-2.png">
+                        <img src="images/work2.jpg">
                         <div class="layer">
                             <!-- Adding description for the image-2 being showed on the website-->
-                            <h3>Music App</h3>
-                            <p>ADD DESCRIPTION HERE, FOR THE RESPECTIVE IMAGE WORK, OF YOURS</p>
+                            <h3>Flight Price Prediction Model</h3>
+                            <p> ● Led comprehensive analysis of flight delays using large-scale dataset from the United States
+                                Department of Transportation's Bureau of Transportation Statistics.</p>
+                            <p> ● Applied supervised learning techniques (Linear Regression, Principal Component Analysis,
+                                Ridge, Lasso Regression, Random Forest, and Support Vector Machine) for accurate Arrival
+                                Delay prediction.</p>
+                            <p> ● Utilized Python, R, SQL, and data analysis libraries (pandas, NumPy) for data manipulation,
+                                exploratory analysis, feature selection, and model training.</p>
+                            <p> ● Collaborated with a multidisciplinary team, effectively communicating findings and insights
+                                through data visualizations and contributing to strategic recommendations for cost efficiency and
+                                operational performance improvement in the aviation industry.</p>
                             <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
                     </div>
                     <div class="work">
-                        <img src="images/work-3.png">
+                        <img src="images/work3.jpg">
                         <div class="layer">
                             <!-- Adding description for the image-3 being showed on the website-->
-                            <h3>Online Shopping App</h3>
-                            <p>ADD DESCRIPTION HERE, FOR THE RESPECTIVE IMAGE WORK, OF YOURS</p>
+                            <h3>Ear Recognition/Detection Model</h3>
+                            <p> ● Conducted literature review to optimize ear pictures as a biometric identifier, identifying
+                                research gaps and opportunities.</p>
+                            <p> ● Developed streamlined two-step algorithm using YOLOv8s and YOLOv8m-cls models for
+                                optimized ear detection and recognition.</p>
+                            <p> ● Created custom dataset for enhanced ear detection and annotation, achieving high precision
+                                and recall during model training.</p>
+                            <p> ● Evaluated model performance using precision, recall, mAP, top-1 accuracy, and top-5 accuracy,
+                                achieving competitive results in ear recognition compared to state-of-the-art models.</p>
                             <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
                     </div>
