--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                             <a href="https://www.facebook.com/profile.php?id=100082319042450"><i class="fa-brands fa-facebook"></i></a>
                             <a href="https://twitter.com/Ashutos25221487"><i class="fa-brands fa-twitter"></i></a>
                         </div>
-                        <a href="images/Ashutosh Rastogi_resume.pdf" download class="btn btn2">Download CV</a> <!--Attaching CV here, to download it from the web browser from website-->
+                        <a href="images/Ashutosh_Rastogi_Data_resume.pdf" download class="btn btn2">Download CV</a> <!--Attaching CV here, to download it from the web browser from website-->
                     </div>
                     <div class="contact-right">
                         <form name="submit-to-google-sheet">
