--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                     msg.innerHTML = "Message sent successfully"          //Adding message to be displayed, after submitting the form on the website.
                     setTimeout(function(){
                         msg.innerHTML = ""
-                    }, 5000) // For removing the message, once the form is being submitted
+                    }, 5000) // For removing the message, once the form is being submitted, is this comment for.
                     form.reset()
                 })
                 .catch(error => console.error('Error!', error.message))
