--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 
         </script>
 
-        <!--Adding Script for the "closemenu()" and "openmenu()" here-->
+        <!--Adding Script for the "closemenu()" and "openmenu()" here for the future references-->
         <script>
             var sidemeu = document.getElementById("sidemenu");
 
