--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                     </div>
                     <div class="contact-right">
                         <form name="submit-to-google-sheet">
-                            <!-- Adding Form Section here, for Contact Me -->
+                            <!-- Adding Form Section here, for Contact Me comment is here-->
                             <input type="text" name="Name" placeholder="Your Name" required>
                             <input type="email" name="Email" placeholder="Your Email" required>
                             <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
