--- a/index.html
+++ b/index.html
@@ -57,32 +57,35 @@
 
                         <div class="tab-titles">
                             <p class="tab-links active-link" onclick="opentab('skills')">Skills</p> <!--Adding onclick feature, so that when user click on a particular tab the info. of that tab is shown-->
-                            <p class="tab-links active-link" onclick="opentab('experience')">Experience</p>
+                            <p class="tab-links active-link" onclick="opentab('experience')">Academic Experience</p>
                             <p class="tab-links active-link" onclick="opentab('education')">Education</p>
                         </div>
                         <div class="tab-contents active-tab" id="skills">
                             <!--Adding SKILLS here for the portfolio-->
                             <ul>
-                                <li><span>R Programming/ Python/ C++</span><br>Designing Data-intensive Applications</li>  
-                                <li><span>Web Development</span><br>Web app Development</li>
-                                <li><span>App Development</span><br>Building data-centric applications</li>
+                                <li><span>R Programming | Python | C/C++ | SQL</span><br>Flight Prediction Model | Bank Loan Prediction Model</li>  
+                                <li><span>OpenCV | Keras | NumPy | Scikit-Learn | TensorFLow</span><br>Ear Detection/Recognition | Robot operating System</li>
+                                <li><span>MS-SQL | SQLite | NoSQL(Pouch/Couch) | HTML/CSS</span><br>Website Building</li>
+                                <li><span>Anaconda Navigator | ROS Gazebo | Tableau | Eclipse | Power BI | ETL(Extract, Transform, and Load) | Git</span><br>Peer-to-Peer Ridesharing Model</li>
                             </ul>
                         </div>
 
                         <div class="tab-contents" id="experience">
                             <!--Adding EXPERINECE here for the portfolio-->
                             <ul>
-                                <li><span>2022 - Current</span><br>Product designing and deployment making at University at Buffalo</li>  
-                                <li><span>2021 - 2022</span><br>Design and managed chest X-Ray based COVID-19 Web Application.</li>
-                                <li><span>2018 - 2019</span><br>Internship at internshala eduction.</li>
+                                <li><span>02/2023 - 05/2023</span><br>Computer Vision Engineer | University at Buffalo</li>  
+                                <li><span>01/2023 - 05/2023</span><br>Data Engineer | University at Buffalo</li>
+                                <li><span>09/2022 - 12/2022</span><br>Data Analyst | University at Buffalo</li>
+                                <li><span>02/2020- 05/2020</span><br>Peer-to-Peer System Developer</li>
+                                <li><span>02/2019 - 05/2019</span><br>Connect4 Game Developer</li>
                             </ul>
                         </div>
 
                         <div class="tab-contents" id="education">
                             <!--Adding EDUCATION here for the portfolio-->
                             <ul>
-                                <li><span>Pursuing</span><br>M.S in Computer Science from University at Buffalo</li>  
-                                <li><span>2022</span><br>B.Tech(Computer Science) from Gurukula Kangri University, India</li>
+                                <li><span>08/2022 - 12/2023</span><br>Master of Science in Computer Science at University at Buffalo-SUNY, United States</li>  
+                                <li><span>08/2018 - 05/2022</span><br>Bachelor of Technology in Computer Science at Gurukula Kangri University, India</li>
                             </ul>
                         </div>
                     </div>
