--- a/index.html
+++ b/index.html
@@ -102,21 +102,21 @@
                         <i class="fa-solid fa-code"></i>
                         <!-- 1st service role, and it description-->
                         <h2>Data Engineer</h2>
-                        <p> Need to Add here</p>
+                        <p> Need to Add here.</p>
                         <a href="#">Learn more</a>
                     </div>
                     <div>
                         <i class="fa-solid fa-crop-simple"></i>
                         <!-- 2nd service role, and it description-->
                         <h2>Data Analyst</h2>
-                        <p> Need to Add here</p>
+                        <p> Need to Add here.</p>
                         <a href="#">Learn more</a>
                     </div>
                     <div>
                         <i class="fa-sharp fa-solid fa-database"></i> <!-- icons in all the above 3 services created from "fontawesome.com"-->
                         <!-- 3rd service role, and it description-->
                         <h2>Computer Vision Engineer</h2>
-                        <p> Need to Add here</p>
+                        <p> Need to Add here.</p>
                         <a href="#">Learn more</a>
                     </div>
                 </div>
