--- a/index.html
+++ b/index.html
@@ -102,21 +102,35 @@
                         <i class="fa-solid fa-code"></i>
                         <!-- 1st service role, and it description-->
                         <h2>Data Engineer</h2>
-                        <p> Need to Add here.</p>
+                        <p> ● Machine learning model development and implementation for predictive analytics and data-driven solutions.</p>
+                        <p> ● Data preprocessing, feature engineering, and handling of missing values and categorical variables.</p>    
+                        <p> ● Actionable insights generation and comprehensive data analysis for process optimization and decision-making.</p>
+                        <p> ● Handling and management of large datasets for improved data efficiency and accuracy.</p>    
+                        <p> ● Expertise in data analytics, statistical modeling, and optimization techniques for various industries and domains.</p>    
                         <a href="#">Learn more</a>
                     </div>
                     <div>
                         <i class="fa-solid fa-crop-simple"></i>
                         <!-- 2nd service role, and it description-->
                         <h2>Data Analyst</h2>
-                        <p> Need to Add here</p>
+                        <p> ● Comprehensive analysis of large-scale datasets to extract valuable insights and trends.</p>
+                        <p> ● Application of supervised learning techniques for accurate prediction and forecasting.</p>    
+                        <p> ● Proficient in Python, R, and SQL for data manipulation, exploratory analysis, and model training.</p>    
+                        <p> ● Expertise in utilizing data analysis libraries such as pandas and NumPy.</p>    
+                        <p> ● Effective communication of findings and insights through data visualizations.</p>    
+                        <p> ● Strategic recommendations for cost efficiency and operational performance improvement in various industries, including aviation.</p>
                         <a href="#">Learn more</a>
                     </div>
                     <div>
                         <i class="fa-sharp fa-solid fa-database"></i> <!-- icons in all the above 3 services created from "fontawesome.com"-->
                         <!-- 3rd service role, and it description-->
                         <h2>Computer Vision Engineer</h2>
-                        <p> Need to Add here</p>
+                        <p> ● Optimization of biometric identification systems using computer vision techniques.</p>
+                        <p> ● Development of streamlined algorithms for efficient ear detection and recognition.</p>    
+                        <p> ● Creation of custom datasets for improved model training and annotation.</p>    
+                        <p> ● Evaluation of model performance using various metrics such as precision, recall, mAP, and accuracy.</p>    
+                        <p> ● Expertise in using YOLOv8s and YOLOv8m-cls models for ear detection and recognition.</p>    
+                        <p> ● Conducting literature reviews to identify research gaps and explore new opportunities in the field of ear biometrics.</p>
                         <a href="#">Learn more</a>
                     </div>
                 </div>
