--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     </div>
                     <div>
                         <i class="fa-sharp fa-solid fa-database"></i> <!-- icons in all the above 3 services created from "fontawesome.com"-->
-                        <!-- 3rd service role, and it description-->
+                        <!-- 3rd service role, and it description are to be added here-->
                         <h2>Computer Vision Engineer</h2>
                         <p> ● Optimization of biometric identification systems using computer vision techniques.</p>
                         <p> ● Development of streamlined algorithms for efficient ear detection and recognition.</p>    
