--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>Copyright Ashutosh. <i class="fa-solid fa-heart"></i> </p>
+                <p>Copyright to Ashutosh, Thanks to GreatStack. <i class="fa-solid fa-heart"></i> </p>
             </div>
         </div>
 
