--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                         <p><i class="fa-solid fa-paper-plane"></i> rastogi@buffalo.edu</p>
                         <p><i class="fa-solid fa-square-phone"></i> 07165331090</p>
                         <div class="social-icons">
-                            <!-- Adding Socail Media profile links, for the contact information-->
+                            <!-- Adding Socail Media profile links, for the contact information are to be added here-->
                             <a href="https://www.linkedin.com/in/ashutosh-rastogi-04b172170/"><i class="fa-brands fa-linkedin"></i></a>
                             <a href="https://www.facebook.com/profile.php?id=100082319042450"><i class="fa-brands fa-facebook"></i></a>
                             <a href="https://twitter.com/Ashutos25221487"><i class="fa-brands fa-twitter"></i></a>
