--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                     <div class="work">
                         <img src="images/work3.jpg">
                         <div class="layer">
-                            <!-- Adding description for the image-3 being showed on the website-->
+                            <!-- Adding description for the image-3 being showed on the website here-->
                             <h3>Ear Recognition/Detection Model</h3>
                             <p> ● Conducted literature review to optimize ear pictures as a biometric identifier, identifying
                                 research gaps and opportunities.</p>
