--- a/index.html
+++ b/index.html
@@ -51,8 +51,22 @@
                     </div>
                     <div class="about-col-2">
                         <h1 class="sub-title">About Me</h1>
+                        <!--ADD ABOUT ME TEXT IN IT-->
+                        <p> 
+                            I am a versatile professional with a strong background in both software engineering and data analytics, I bring a unique blend of skills and expertise to the table. With a keen eye for detail and a passion for innovation, I am committed to delivering high-quality software solutions that exceed expectations. In my software engineering journey, I have honed my abilities in software design, development, and testing, ensuring optimal code efficiency and seamless user experiences. My expertise in leveraging cutting-edge technologies and applying best practices allows me to architect scalable solutions that drive business growth. On the data analytics front, I am well-versed in Python, R, SQL, and a range of data analytics tools. By harnessing the power of data, I have optimized statistical models, generated actionable insights, and facilitated data-driven decision-making. My proficiency in pattern recognition and advanced analytical techniques empowers me to uncover hidden trends and drive superior outcomes. With a strong passion for continuous improvement, I strive to leverage data-driven strategies to enhance business processes and achieve organizational excellence. I am eager to collaborate with a dynamic team, contribute my diverse skill set, and make a meaningful impact in the field of software and data engineering. 
+                        </p>
+                        <!-- <p>
+                            In my software engineering journey, I have honed my abilities in software design, development, and testing, ensuring optimal code efficiency and seamless user experiences. My expertise in leveraging cutting-edge technologies and applying best practices allows me to architect scalable solutions that drive business growth.
+                        </p>
                         <p>
-                            <!--ADD ABOUT ME TEXT IN IT--> Writing about me text here.
+                            On the data analytics front, I am well-versed in Python, R, SQL, and a range of data analytics tools. By harnessing the power of data, I have optimized statistical models, generated actionable insights, and facilitated data-driven decision-making. My proficiency in pattern recognition and advanced analytical techniques empowers me to uncover hidden trends and drive superior outcomes.
+                        </p>
+                        <p>
+                            With a strong passion for continuous improvement, I strive to leverage data-driven strategies to enhance business processes and achieve organizational excellence. I am eager to collaborate with a dynamic team, contribute my diverse skill set, and make a meaningful impact in the field of software and data engineering.
+                        </p> -->
+                        <p>
+
+                            Let's connect and explore how my versatile skill set and dedication to excellence can contribute to mutual success !!
                         </p>
 
                         <div class="tab-titles">
