--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <i class="fa-solid fa-bars" onclick="openmenu()"></i>
                 </nav>
                 <div class="header-text">
-                    <p>DATA ENGINEER/ DATA ANALYST</p> <!-- Position Name, which I want to be displayed on website -->
+                    <p>SOFTWARE / DATA  ENGINEER</p> <!-- Position Name, which I want to be displayed on website -->
                     <h1>Hi, I'm <span>Ashutosh</span><br>Rastogi From United States</h1> <!--Small intoduction of mine -->
                 </div>
             </div>
